src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/crossing_bridges.bgs
FIELD
11 x 8 | 2

ISLANDS
( 0, 3 | 1 )
( 3, 0 | 1 )
( 3, 5 | 1 )
( 5, 3 | 1 )

BRIDGES
( 0, 1 | false )
( 2, 3 | false )
